--- a/nabv/apps/db_rails/config/locales/en.yml
+++ b/nabv/apps/db_rails/config/locales/en.yml
@@ -1,3 +1,4 @@
+# Copyright (c) 2009-2013 VMware, Inc.
 # Sample localization file for English. Add more files in this directory for other locales.
 # See http://github.com/svenfuchs/rails-i18n/tree/master/rails%2Flocale for starting points.
 
