add jambay to AUTHORS

--- a/AUTHORS
+++ b/AUTHORS
@@ -8,4 +8,5 @@
 # Please feel free to add any personal details.
 
 ---
+- James Bayer             	{ email: jbayer@vmware.com }
 - Mark Lucovsky             { email: markl@vmware.com }
